--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="movie-area">
         </div>
     </div>
-    <button class="hidden loadMore">Load More</button>
+    <button class="loadMore hidden">Load More</button>
     <script src="app.js"></script>
 </body>
 </html>
